# volga_way

./: CMakeLists.txt
gui/: CMakeLists.txt
gui/include/gui/: gui.h  main_screen.h  render.h  utils.h
gui/src/: gui.cpp  main_screen.cpp  render.cpp  utils.cpp
loader/: CMakeLists.txt
loader/include/loader/: loader.h
loader/src/: loader.cpp
volga/: CMakeLists.txt  main.cpp
vwfs/: example.vwf
